# otus-cpp-prof

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml  release_hw2.yml  test.yml
homework1/: CMakeLists.txt  lib.cpp  version.h.in
homework1/gtests/: CMakeLists.txt  tests.cpp
homework2/: CMakeLists.txt  main.cpp
